<resources>
    <string name="app_name">My Accountant</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Masukkan Nama</string>
    <string name="skip">Skip</string>
    <string name="save_money">Save Money</string>
    <string name="membuat_target_menabung_sesuai_dengan_kebutuhan">Membuat target menabung sesuai dengan kebutuhan</string>
    <string name="merekomendasikan_warung_tempat_makan_dan_laundry_sesuai_budget_mu">Merekomendasikan Warung, Tempat Makan dan Laundry sesuai budget mu</string>
    <string name="save_money2">Save Money</string>
    <string name="tv_resto">Resto</string>
    <string name="tv_laundry">Laundry</string>
    <string name="tv_counter">Counter</string>
    <string name="finance">Finance</string>
    <string name="services">Services</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="icon_arrow_down">Icon Arrow Down</string>
    <string name="desember_2023">Desember, 2023</string>
    <string name="income">Income</string>
    <string name="icon_wallet">Icon Wallet</string>
    <string name="rp">Rp. </string>
    <string name="_4_600_000">4.600.000</string>
    <string name="expense">Expense</string>
    <string name="rp_1_670_000">Rp.1.670.000</string>
    <string name="budget">Budget</string>
    <string name="total">Total</string>
    <string name="card">Card</string>
    <string name="tv_nearest_counter">Nearest Counter</string>
    <string name="tv_nearest_laundry">Nearest Laundry</string>
    <string name="nama_counter">Nama</string>
    <string name="nama_laundry">Nama Laundry</string>
    <string name="counter_location">Location</string>
    <string name="laundry_location">Location Laundry</string>
    <string name="pilih_harga">Pilih harga</string>
    <string name="harga">INR 56990</string>
    <string name="laundry_price">Rp 5000</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="next">Next</string>
    <string name="icon_add">Icon Add</string>
    <string name="save">Save</string>
    <string name="lets_register">Lets Register</string>
    <string name="masukkan_nama_beserta_tipe_penghematan_uang">Masukkan Nama beserta Tipe Penghematan uang</string>
    <string name="name">Name</string>
    <string name="input_your_name">Input Your Name</string>
    <string name="saving_type">Saving Type</string>
    <string name="choose_your_saving">Choose Your Saving</string>
    <string name="lanjut">Continue</string>
    <string name="initial_income">Initial Income</string>
    <string name="your_first_nominal_income">Your first nominal income</string>
    <string name="ex_1_250_000">Ex: 1.250.000</string>
    <string name="minimum_nominal">Minimum nominal is 100.000</string>
    <string name="your_income">Your Income</string>
    <string name="source_of_income">Source of income</string>
    <string name="source_your_income">Source Your Income</string>
    <string name="total_income">Total Income</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="expenditure_type">Expenditure type</string>
    <string name="select_date">Select Date</string>
    <string name="choose_expenditure_type">Choose Expenditure Type</string>
    <string name="history_total">total</string>
    <string name="savings">Savings</string>
    <string name="currency_amount">Rp. %1$d</string>
    <string name="month_year">%1$s %2$s</string>
    <string name="si_life_balance">Si Life Balance</string>
    <string name="si_hemat">Si Hemat</string>
    <string name="si_shopping">Si Shopping</string>
    <string name="detail_history">Detail History</string>
    <string name="saving">Saving</string>
    <string name="total_expense">Total Expense</string>
    <string name="rp_400_000">-Rp.400.000</string>
    <string name="remaining_budget">Remaining budget</string>
    <string-array name="spinner_item">
        <item> </item>
        <item>Array Item One</item>
        <item>Array Item Two</item>
        <item>Array Item Three</item>
    </string-array>
</resources>