<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp">

    <TextView
        android:id="@+id/title_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/fontbold"
        android:text="@string/income"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/income_info" />

    <TextView
        android:id="@+id/tv_min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/fontbold"
        android:text="@string/minimum_nominal"
        android:textColor="@color/university_red"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/field_input"
        app:layout_constraintStart_toStartOf="@+id/field_input"
        app:layout_constraintTop_toBottomOf="@+id/field_input"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/fontbold"
        android:text="@string/initial_income"
        android:textColor="@color/raisin_black"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/income_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontmedium"
        android:text="@string/your_first_nominal_income"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/fontbold"
        android:paddingVertical="20dp"
        android:text="@string/lanjut"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_input"
        style="@style/TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/your_income"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fontmedium"
            android:imeOptions="actionDone"
            android:maxLength="50"
            android:padding="16dp"
            android:singleLine="true"
            android:textColor="@color/raisin_black"
            android:textColorHint="@color/gray"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>