<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_laundry"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/RoundedSquare"/>

            <TextView
                android:id="@+id/tvTitleLaundry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:ellipsize="end"
                android:fontFamily="@font/fontbold"
                android:maxLines="1"
                android:text="@string/nama_laundry"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:textColorHint="#212121"
                android:textSize="15sp"
                android:textFontWeight="700"/>

            <TextView
                android:id="@+id/tv_location_laundry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingBottom="20dp"
                android:text="@string/laundry_location"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textSize="15sp"
                android:drawableLeft="@drawable/ic_location"/>

            <TextView
                android:id="@+id/tv_price_laundry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/fontbold"
                android:text="@string/laundry_price"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textStyle="bold"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>